# scratchpad

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
lib/include/: binary_tree.hpp  lru_cache.hpp  test_lib.hpp
lib/src/: lib.cpp
